# SHIQAH

./: .env  .env.example  .gitattributes  .gitignore  README.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3e3a939f2699_car_media.py  5c7b0c3f2e41_restore_carmedia_table.py  84d1654a1402_add_leads.py  9f1c2d3e4a5b_add_car_location.py  a7b8c9d0e1f2_add_accepted_at_to_lead.py  ab12cd34ef56_add_public_bidding_flag_to_car.py  b2c3d4e5f6a7_make_car_price_optional.py  b7c3d2e9f1ab_create_chat_table.py  c4d5e6f7a8b9_add_review_metadata.py  c9d8e7f6a5b4_add_engine_specs_to_car.py  d1e2f3a4b5c6_add_user_name.py  d9e8f7a6b5c4_add_car_ml_fields.py  e6f7a8b9c0d1_add_user_public_id.py  e7f8a9b0c1d2_add_sold_at_to_car.py  e8f9a0b1c2d3_add_sold_price_to_car.py  e9f0a1b2c3d4_rename_price_mileage_columns.py  f1a2b3c4d5e6_add_offer_amount_to_lead.py  f2a3b4c5d6e7_add_archive_restore_metadata.py  g3h4i5j6k7l8_add_seller_contact_preferences.py  h4i5j6k7l8m9_rename_us_market_fields.py  i5j6k7l8m9n0_add_email_login_to_user.py  j6k7l8m9n0o1_add_rejected_at_to_lead.py  k7l8m9n0o1p2_create_notification_table.py  l8m9n0o1p2q3_add_user_reports.py  m9n0o1p2q3r4_add_offer_expiration.py
apps/api/app/: main.py
apps/api/app/core/: config.py  deps.py
apps/api/app/ml_models/: __init__.py  car_price_pipeline.pkl  pricing_model.pkl  pricing_preprocessing.py  pricing_transformers.py
apps/api/app/models/: car.py  (+5 more)
apps/api/garaj_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_pre_deployment.py
(+96 files in other folders)
